# trophy-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  trophy_bot.db
.claude/: settings.json
.github/workflows/: ci.yml
docs/: README.md
docs/adr/: 0001-rust-rewrite-with-serenity-poise.md  0002-normalized-database-with-seaorm.md  0003-sqlite-dev-postgresql-prod.md  0004-uuidv7-internal-ids.md  0005-trophy-names-unique-per-guild.md  0006-score-computed-on-the-fly.md  0007-embedded-migration-cli.md  0008-legacy-import-as-cli-subcommand.md  0009-graceful-shutdown.md  0010-i18n-fluent-interaction-locale.md  README.md
docs/archive/: 2025-10-06-analiza-parrafo-por-parrafo-claudemd-y-examina-e.txt  AGENTS.md  CLAUDE_OLD.md  COMMANDS_AND_FUNCTIONALITY.md  COMMAND_IMPLEMENTATIONS.md  DISCORD_COMMANDS_DOCUMENTATION.md  MIGRATION.md  README_RUST.md  SIMPLIFICATION.md  ULTRA_SIMPLE.md
docs/reviews/: 2026-07-08-ultracode-migration-review.md  2026-07-08-ultracode-ponytail-audit.md
docs/runbooks/: first-data-migration.md
docs/specs/: README.md  commands-admin.md  commands-trophy-management.md  commands-user.md  commands-utility.md  core-behaviors.md  data-model-legacy.md  i18n.md  implementation-plan.md  migration-import.md  rust-parity-plan.md  schema.md
locales/en-US/: about.ftl  award.ftl  clear.ftl  common.ftl  create.ftl  delete.ftl  details.ftl  edit.ftl  export.ftl  forgetme.ftl  leaderboard.ftl  link.ftl  main.ftl  medals_panel.ftl  panel.ftl  ping.ftl  revoke.ftl  rewards.ftl  settings.ftl  show.ftl  statics.ftl  stats.ftl  trophies.ftl
scripts/: verify_import.py
src/: bot.rs  cli.rs  i18n.rs  main.rs
src/bot/: buttons.rs  commands.rs  images.rs  medals_panel.rs  mod.rs  panel_updater.rs  render.rs  resolver.rs  reward_apply.rs  util.rs
src/bot/commands/: about.rs  award.rs  clear.rs  create.rs  delete.rs  details.rs  edit.rs  export.rs  forgetme.rs  help.rs  imsafe.rs  invite.rs  leaderboard.rs  link.rs  mod.rs  panel.rs  permissions.rs  ping.rs  revoke.rs  rewards.rs  settings.rs  show.rs  stats.rs  suggest.rs  support.rs  trophies.rs
src/domain/: guild_links.rs  mod.rs  normalize.rs  queries.rs  rewards.rs  settings.rs  test_support.rs
src/entities/: active_medals_panels.rs  bot_stats.rs  guild_links.rs  guild_settings.rs  guilds.rs  leaderboard_panels.rs  medals_overview_panels.rs  mod.rs  retired_medals_overview_panels.rs  role_rewards.rs  trophies.rs  user_trophies.rs
src/import/: images.rs  mod.rs  report.rs  tests.rs
src/legacy/: mod.rs  model.rs  tests.rs
src/migrations/: m20251115_000001_create_basic_tables.rs  m20260708_000001_initial_schema.rs  m20260719_000002_medal_categories.rs  m20260719_000003_guild_links.rs  m20260719_000004_medals_overview_panels.rs  m20260720_000005_retired_medals_overview_panels.rs  mod.rs  tests.rs
src/smoke/: mod.rs
