[package]
name = "trophy-bot"
version = "2.0.0"
edition = "2024"

[dependencies]
# CLI and core
clap = { version = "4.6", features = ["derive", "env"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "signal", "fs"] }
anyhow = "1.0"

# DB
sea-orm = { version = "=2.0.0-rc.42", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm-migration = { version = "=2.0.0-rc.42", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Pinned to 0.12: it still exposes the `rustls-tls` feature (renamed to
# `rustls` in 0.13, which also switches the crypto provider to aws-lc) and
# matches the reqwest that serenity 0.12 pulls in, so there is a single copy.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Discord API
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
poise = "0.6"

# i18n
fluent-templates = "0.14"

# Features for future expansion
[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
overflow-checks = true
debug = false
incremental = false
debug-assertions = false
